--- a/style.css
+++ b/style.css
@@ -1,27 +1,46 @@
-body
-{
-  color: white;
-  background: #c0d3ff;
+body{
+    background:rgb(253, 192, 192);
 }
-span
-{
-  font-size: 30px;
-}
-#camera , #result
-{
-  border: 2px dashed black;
-  width: 350px;
-  height: 300px; 
-}
-#result_emotion_name ,#result_emotion_name2  
-{
-  color: black;
-}
-.emotion_name
-{
-  font-size: 40px;
-}
-.emoji
-{
-  font-size:48px;
-}
+ span
+ {
+     color: red;
+     font-size: 16px;
+ }	
+ li img
+ {
+     width: 200px;
+     border-radius: 20px;
+ }
+ .division
+ {
+     background: #fff8f8;
+     padding: 30px;
+     border-radius: 20px;
+     width: 50%;
+     display: inline-block;
+     box-shadow: 5px 5px 18px grey;
+ }
+ b
+ {
+     color: purple;
+ }
+ 
+ .result_obj
+ {
+     text-align: center;
+     background: #dedddd;
+     border-radius: 20px;
+     padding: 10px;
+ }
+ .copy_right_footer {
+    position: fixed;
+    color: #000000;
+    bottom: 0;
+    width: 100%;
+    background-color: #b3b3b3;
+    line-height: 3;
+    text-align: center;
+      font-family: cursive;
+      font-size:100%;
+ 
+ }
